fix: Fix helm pull syntax to use --version flag separately
- Changed helm pull command from 'helm pull chart:version' to 'helm pull chart --version version'
- Fixed OCI base URL from infraforge to nimbusprotch
- Added giteaURL and organization fields to ApplicationClaim and PlatformApplicationClaim
- Set WORKDIR to /tmp in Dockerfile for helm operations

--- a/deployments/dev/apps-claim.yaml
+++ b/deployments/dev/apps-claim.yaml
@@ -12,6 +12,10 @@ spec:
   environment: dev
   clusterType: nonprod
 
+  # GitOps configuration
+  giteaURL: http://gitea-http.gitea.svc.cluster.local:3000
+  organization: infraforge
+
   owner:
     team: platform-team
     email: platform@infraforge.io
