--- a/infrastructure/platform-operator/config/manager/deployment.yaml
+++ b/infrastructure/platform-operator/config/manager/deployment.yaml
@@ -16,15 +16,15 @@ spec:
         control-plane: controller-manager
     spec:
       serviceAccountName: platform-operator
+      imagePullSecrets:
+      - name: ghcr-secret
       containers:
       - name: manager
         image: platform-operator:latest
         imagePullPolicy: IfNotPresent
         args:
         - --leader-elect
-        - --gitea-url=http://gitea-http.gitea.svc.cluster.local:3000
         - --gitea-username=gitea_admin
-        - --gitea-org=nimbusprotch
         - --charts-path=/charts
         env:
         - name: GITEA_TOKEN
