fix: Fix ApplicationSet git files generator and enable/disable controls
- Changed from git directories to git files generator for proper config.yaml template variable resolution
- Enable/disable controls are already implemented in both controllers
- This fixes the {{config.version}} template variable issue in ArgoCD

--- a/infrastructure/platform-operator/config/crd/bases/platform.infraforge.io_applicationclaims.yaml
+++ b/infrastructure/platform-operator/config/crd/bases/platform.infraforge.io_applicationclaims.yaml
@@ -104,6 +104,11 @@ spec:
                       required:
                       - name
                       type: object
+                    enabled:
+                      default: true
+                      description: 'Enabled whether this application should be deployed
+                        (default: true)'
+                      type: boolean
                     env:
                       description: Env environment variables
                       items:
