fix: Fix all microservices to use Node.js and TypeScript properly
- Update all Dockerfiles to use node:20-alpine
- Add/update package.json with Express and TypeScript
- Add tsconfig.json for all services
- Simplify dependencies to just Express
- Fix npm start scripts
- Ensure all services run on port 8080

--- a/microservices/notification-service/Dockerfile
+++ b/microservices/notification-service/Dockerfile
@@ -1,42 +1,15 @@
-# Build stage
-FROM golang:1.21-alpine AS builder
-
-RUN apk add --no-cache git
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Copy go mod files
-COPY go.mod go.sum ./
-RUN go mod download
+COPY package*.json ./
+RUN npm install
 
-# Copy source code
-COPY . .
+COPY tsconfig.json ./
+COPY src ./src
 
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o notification-service .
+RUN npm run build
 
-# Final stage
-FROM alpine:3.18
+EXPOSE 8080
 
-RUN apk --no-cache add ca-certificates tzdata
-
-WORKDIR /app
-
-# Copy the binary from builder
-COPY --from=builder /app/notification-service .
-
-# Create non-root user
-RUN addgroup -g 1000 -S app && \
-    adduser -u 1000 -S app -G app
-
-USER app
-
-# Expose port
-EXPOSE 8084
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8084/health || exit 1
-
-# Run the application
-CMD ["./notification-service"]
+CMD ["npm", "start"]
