--- a/microservices/order-service/package.json
+++ b/microservices/order-service/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ecommerce-platform",
+  "name": "order-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "order-service microservice",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "express": "^4.18.2"
@@ -16,9 +16,5 @@
     "@types/node": "^20.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
