--- a/microservices/payment-service/package.json
+++ b/microservices/payment-service/package.json
@@ -17,26 +17,7 @@
     "format": "prettier --write src/**/*.ts"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/exporter-prometheus": "^0.45.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^0.45.0",
-    "@opentelemetry/instrumentation": "^0.45.0",
-    "@opentelemetry/instrumentation-express": "^0.34.0",
-    "@opentelemetry/instrumentation-http": "^0.45.0",
-    "@opentelemetry/resources": "^1.18.0",
-    "@opentelemetry/sdk-metrics": "^1.18.0",
-    "@opentelemetry/sdk-trace-base": "^1.18.0",
-    "@opentelemetry/sdk-trace-node": "^1.18.0",
-    "@opentelemetry/semantic-conventions": "^1.18.0",
-    "@prisma/client": "^5.6.0",
-    "amqplib": "^0.10.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "ioredis": "^5.3.2",
-    "stripe": "^14.5.0",
-    "winston": "^3.11.0",
-    "winston-loki": "^6.0.8"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
