--- a/microservices/product-service/Dockerfile
+++ b/microservices/product-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS builder
+FROM node:20-alpine
 
 WORKDIR /app
 
@@ -10,15 +10,6 @@ COPY src ./src
 
 RUN npm run build
 
-FROM node:18-alpine
-
-WORKDIR /app
-
-COPY package*.json ./
-RUN npm install --production
-
-COPY --from=builder /app/dist ./dist
-
 EXPOSE 8080
 
-CMD ["node", "dist/index.js"]
+CMD ["npm", "start"]
