--- a/microservices/product-service/package.json
+++ b/microservices/product-service/package.json
@@ -11,23 +11,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^0.46.0",
-    "@opentelemetry/instrumentation": "^0.46.0",
-    "@opentelemetry/instrumentation-express": "^0.34.0",
-    "@opentelemetry/instrumentation-http": "^0.46.0",
-    "@opentelemetry/resources": "^1.19.0",
-    "@opentelemetry/sdk-trace-base": "^1.19.0",
-    "@opentelemetry/sdk-trace-node": "^1.19.0",
-    "@opentelemetry/semantic-conventions": "^1.19.0",
-    "amqplib": "^0.10.3",
-    "express": "^4.18.2",
-    "ioredis": "^5.3.2",
-    "pg": "^8.11.3",
-    "prom-client": "^15.0.0",
-    "uuid": "^9.0.1",
-    "winston": "^3.11.0",
-    "winston-loki": "^6.0.8"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
