--- a/microservices/product-service/tsconfig.json
+++ b/microservices/product-service/tsconfig.json
@@ -11,9 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
