fix: Major improvements to platform deployment
1. Platform Operator artık GitHub Packages'dan çekiliyor (ghcr.io)
   - Local build kaldırıldı, production image kullanılıyor
   - ImagePullSecrets eklendi (ghcr-secret)
   - STRICT RULE: Hiçbir zaman local build yapılmayacak

2. Helm chart'lara namespace desteği eklendi
   - Her chart otomatik namespace oluşturabilir (createNamespace: true)
   - Environment-based namespace'ler (dev, qa, staging, prod)
   - Namespace template tüm chart'lara eklendi

3. Notification service build hatası düzeltildi
   - Go dosyaları temizlendi (sadece Node.js kaldı)
   - GitHub Actions build başarılı olacak

4. GitOps yapısı onaylandı
   - OCI mode'da charts Gitea'ya upload edilmiyor
   - Charts sadece GitHub Packages'da (ghcr.io)
   - Voltran repo sadece GitOps config içeriyor

--- a/charts/kafka/values.yaml
+++ b/charts/kafka/values.yaml
@@ -1,4 +1,9 @@
 kafka:
+# Namespace configuration
+createNamespace: true
+namespace: ""  # Will use .Release.Namespace if empty
+environment: dev
+
   replicas: 1
   version: 3.5.0
   
