--- a/charts/mongodb/values.yaml
+++ b/charts/mongodb/values.yaml
@@ -1,4 +1,9 @@
 mongodb:
+# Namespace configuration
+createNamespace: true
+namespace: ""  # Will use .Release.Namespace if empty
+environment: dev
+
   members: 1
   version: "6.0.5"
   
