fix: Add ApplicationSet creation to ArgoCD and improve security
- ApplicationClaimGitOpsReconciler now creates ApplicationSet in ArgoCD
- PlatformApplicationClaimReconciler now creates ApplicationSet in ArgoCD
- Added createApplicationSet method to both controllers
- Added unstructured imports for dynamic K8s object handling
- Replace hardcoded tokens with environment variables
- Add .env.example for configuration template
- Update .gitignore for security
- Add setup-gitea.sh script for GitOps structure
- Fix imagePullSecrets in kustomization
- Fixes the issue where claims were marked Ready but no ApplicationSets appeared in ArgoCD

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ npm-debug.log*
 # Build artifacts
 bin/
 dist/
+# Environment variables
+.env
+.env.local
+
+# Temporary files
+*.tmp
+*.bak
+*~
+/tmp/
+
+# Helm package files in root
+*.tgz
