fix: Update operator deployment with correct image and pull secret
- Use ghcr.io/nimbusprotch/platform-operator:latest image
- Configure ghcr-pull-secret for image authentication
- Update kustomization for proper image replacement

--- a/infrastructure/platform-operator/config/manager/deployment.yaml
+++ b/infrastructure/platform-operator/config/manager/deployment.yaml
@@ -17,10 +17,10 @@ spec:
     spec:
       serviceAccountName: platform-operator
       imagePullSecrets:
-      - name: ghcr-secret
+      - name: ghcr-pull-secret
       containers:
       - name: manager
-        image: platform-operator:latest
+        image: ghcr.io/nimbusprotch/platform-operator:latest
         imagePullPolicy: IfNotPresent
         args:
         - --leader-elect
