fix: Fix ApplicationSet generation and add imagePullSecrets
- Fix platform ApplicationSet name generation with proper environment
- Add imagePullSecrets for GHCR to all deployments
- Set default image tag to 'latest' when not specified
- Switch from List Generator to Git Directories Generator for ApplicationSets

--- a/infrastructure/platform-operator/config/manager/kustomization.yaml
+++ b/infrastructure/platform-operator/config/manager/kustomization.yaml
@@ -4,6 +4,9 @@ namespace: platform-operator-system
 resources:
 - deployment.yaml
 images:
+- name: controller
+  newName: ghcr.io/nimbusprotch/platform-operator
+  newTag: latest
 - name: platform-operator:latest
   newName: ghcr.io/nimbusprotch/platform-operator
   newTag: latest
