--- a/deployments/dev/apps-claim.yaml
+++ b/deployments/dev/apps-claim.yaml
@@ -22,7 +22,7 @@ spec:
         version: "1.0.0"
       image:
         repository: ghcr.io/nimbusprotch/product-service
-        tag: "20251221-221634"
+        tag: "latest"
       serviceName: product-service
       version: v1.0.0
       replicas: 1
@@ -53,7 +53,7 @@ spec:
         version: "1.0.0"
       image:
         repository: ghcr.io/nimbusprotch/user-service
-        tag: "20251221-221631"
+        tag: "latest"
       serviceName: user-service
       version: v1.0.0
       replicas: 1
