fix: add charts to Docker image and improve Makefile
- Add charts to Dockerfile for bootstrap
- Make GITHUB_TOKEN optional in Makefile
- Remove ChartMuseum, use Gitea charts repo
- Delete obsolete scripts (setup-gitea.sh, push-charts-to-gitea.sh)

--- a/infrastructure/platform-operator/Dockerfile
+++ b/infrastructure/platform-operator/Dockerfile
@@ -41,6 +41,8 @@ WORKDIR /
 COPY --from=builder /workspace/manager .
 # Copy helm binary
 COPY --from=builder /usr/local/bin/helm /usr/local/bin/helm
+# Copy charts directory
+COPY --from=builder /workspace/charts /charts
 
 USER 65532:65532
 
