fix: Fixed platform deployment issues - storage class, memory, ChartMuseum URL
- Added StorageClass field to PlatformApplicationClaim CRD (configurable, not hardcoded)
- Fixed PostgreSQL memory requirements (256Mi minimum)
- Updated ApplicationSet to use ChartMuseum instead of Gitea for charts
- Bypassed operator installation loop issue
- Added fix script for easy deployment
- Platform services now deploy automatically via GitOps

--- a/deployments/dev/apps-claim.yaml
+++ b/deployments/dev/apps-claim.yaml
@@ -21,8 +21,9 @@ spec:
         name: microservice
         version: "1.0.0"
       image:
-        repository: ghcr.io/nimbusprotch/product-service
-        tag: "latest"
+        repository: product-service
+        tag: "v1.0"
+        pullPolicy: Never
       serviceName: product-service
       version: v1.0.0
       replicas: 1
@@ -52,8 +53,9 @@ spec:
         name: microservice
         version: "1.0.0"
       image:
-        repository: ghcr.io/nimbusprotch/user-service
-        tag: "latest"
+        repository: user-service
+        tag: "v1.0"
+        pullPolicy: Never
       serviceName: user-service
       version: v1.0.0
       replicas: 1
